--- a/MIS_2019/MIS_2019.csproj
+++ b/MIS_2019/MIS_2019.csproj
@@ -131,6 +131,11 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model_MIS.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="Images\MISlogo.png" />
+    <Content Include="Images\MISlogo2 copy.png" />
+    <Content Include="Images\MISlogo2.png" />
+    <Content Include="Images\Search.gif" />
+    <Content Include="Images\SSlogo.png" />
     <Content Include="Models\Model_MIS.edmx.diagram">
       <DependentUpon>Model_MIS.edmx</DependentUpon>
     </Content>
@@ -160,6 +165,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\LoadMenu.js" />
     <Content Include="Scripts\loadreport.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config">
@@ -243,6 +249,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_MenuPartial.cshtml" />
     <Content Include="Views\Shared\_Layout2.cshtml" />
+    <Content Include="Views\Shared\_Layout3.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -252,7 +259,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
